--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
     <div class="wrapper">
         <header class="header">
-            <img src="" alt="" class="header__logo">
+            <img src="./img/logo.png" alt="" class="header__logo">
             <ul class="header__items">
-                <li class="header-button">Home</li>
+                <li class="header-button header-button--active">Home</li>
                 <li class="header-button">Buy</li>
                 <li class="header-button">Rent</li>
                 <li class="header-button">Sell</li>
@@ -30,10 +30,10 @@
             <section class="content-info">
                 <h1 class="content__title">The Power Tools to Sell Your Home</h1>
                 <p class="content__subtitle">The shortest distance between
-                    paradise and the place you call home</p>
+                    paradise </br> and the place you call home</p>
                 <button class="content__button">Learn More</button>
             </section>
-            <img src="" alt="">
+            <img class="content__house" src="./img/house.png" alt="">
         </main>
 
         <footer class="footer">
