--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
         <footer class="footer">
 
             <div class="footer-search">
-                <form action="" class="search__bar"></form>
+                <form action="" class="search__bar">
+                    <input class="search__bar-bar" type="search" name="" id="">
+                </form>
                 <div class="search-buttons">
                     <button class="search__button">
                         <h3 class="search-button__title">Location</h3>
-                        <p class="search-button__info"></p>
+                        <p class="search-button__info">Las Vegas</p>
                     </button>
                     <button class="search__button">
                         <h3 class="search-button__title">Type</h3>
-                        <p class="search-button__info"></p>
+                        <p class="search-button__info">Apartments</p>
                     </button>
                     <button class="search__button">
                         <h3 class="search-button__title">Pricing</h3>
-                        <p class="search-button__info"></p>
+                        <p class="search-button__info">$250k-$500k</p>
                     </button>
                     <button class="search__search">Search Now</button>
                 </div>
