--- a/index.html
+++ b/index.html
@@ -61,10 +61,14 @@
 
             <div class="footer-info">
                 <div class="footer-info__desc"> Description
-                    <form action="" class="desc__search"></form>
+                    <form action="" class="desc__search">
+                        <input placeholder="Comfortable and big house for the whole family" type="search" name="" class="search__field" id="">
+                    </form>
                 </div>
                 <div class="footer-info__loc"> Location
-                    <form action="" class="loc__search"></form>
+                    <form action="" class="loc__search">
+                        <input placeholder="308 Negra Arroyo Lane" type="search" name="" class="search__field" id="">
+                    </form>
                 </div>
             </div>
 
