--- a/index.html
+++ b/index.html
@@ -44,14 +44,32 @@
                 </form>
                 <div class="search-buttons">
                     <button class="search__button">
+                        <div class="search-popup">
+                            <div class="popup__item">Albania</div>
+                            <div class="popup__item">Niger</div>
+                            <div class="popup__item">Mozambique</div>
+                            <div class="popup__item">Taiwan</div>
+                        </div>
                         <h3 class="search-button__title">Location</h3>
                         <p class="search-button__info">Las Vegas</p>
                     </button>
                     <button class="search__button">
+                        <div class="search-popup">
+                            <div class="popup__item">Albania</div>
+                            <div class="popup__item">Niger</div>
+                            <div class="popup__item">Mozambique</div>
+                            <div class="popup__item">Taiwan</div>
+                        </div>
                         <h3 class="search-button__title">Type</h3>
                         <p class="search-button__info">Apartments</p>
                     </button>
                     <button class="search__button">
+                        <div class="search-popup">
+                            <div class="popup__item">Albania</div>
+                            <div class="popup__item">Niger</div>
+                            <div class="popup__item">Mozambique</div>
+                            <div class="popup__item">Taiwan</div>
+                        </div>
                         <h3 class="search-button__title">Pricing</h3>
                         <p class="search-button__info">$250k-$500k</p>
                     </button>
