--- a/index.html
+++ b/index.html
@@ -55,20 +55,17 @@
                     </button>
                     <button class="search__button">
                         <div class="search-popup">
-                            <div class="popup__item">Albania</div>
-                            <div class="popup__item">Niger</div>
-                            <div class="popup__item">Mozambique</div>
-                            <div class="popup__item">Taiwan</div>
+                            <div class="popup__item">Apartments</div>
+                            <div class="popup__item">Household</div>
+                            <div class="popup__item">Garage</div>
+                            <div class="popup__item">Office</div>
                         </div>
                         <h3 class="search-button__title">Type</h3>
                         <p class="search-button__info">Apartments</p>
                     </button>
                     <button class="search__button">
-                        <div class="search-popup">
-                            <div class="popup__item">Albania</div>
-                            <div class="popup__item">Niger</div>
-                            <div class="popup__item">Mozambique</div>
-                            <div class="popup__item">Taiwan</div>
+                        <div class="search-popup search-popup--last">
+                            <input class="popup__input" type="text" name="" id="">
                         </div>
                         <h3 class="search-button__title">Pricing</h3>
                         <p class="search-button__info">$250k-$500k</p>
