--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
                     </button>
                     <button class="search__button">
                         <div class="search-popup search-popup--last">
-                            <input class="popup__input" type="text" name="" id="">
+                            <input class="popup__input" type="number" name="" id="">
                         </div>
                         <h3 class="search-button__title">Pricing</h3>
                         <p class="search-button__info">$250k-$500k</p>
                     </button>
-                    <button class="search__search">Search Now</button>
+                    <button target="_blank" class="search__search">Search Now</button>
                 </div>
             </div>
 
